tests/expected/err-funass1.uc.out
/home/krikava/Teaching/FIT/NI-APR/2022/microc/tests/../examples/err-funass1.uc:[2:10]: error: cannot assign to a function
      main = 5; // error: assignment to a function
           ^

1
